# linear-algebra

./: CMakeLists.txt
h/: Matrix.h  Monome.h  Polynome.h  Rational.h  Scheme.h  SchemeCIR.h  Solver.h  Vector.h
python_processing/: main.py
src/: Matrix.cpp  Monome.cpp  Polynome.cpp  Rational.cpp  Scheme.cpp  SchemeCIR.cpp  Solver.cpp  Vector.cpp  main.cpp
